ags (3.15.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved AgsCompositeEditor AgsMachine::resize-audio-channels() and AgsMachine::resize-pads() to destroy or create AgsWaveEdit
	* improved AgsCompositeEditor::machine-changed() to restore automation ports

ags (3.15.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsSynthUtil and AgsFMSynthUtil

ags (3.15.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed configure event of editors
	* fixed ags-fx-peak clear buffer
	* fixed ags_audio_buffer_util_peak*() on macOS
	* fixed ags_peak_util_compute*() on macOS

ags (3.15.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsFxFMSynthAudio missing OSC 3 port
	* fixed some bugs in ags_noise_util.c

ags (3.15.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsHybridFMSynth
	* implemented ags-fx-fm-synth
	* implemented noise in ags-fx-synth
	* implemented AgsNoiseUtil

ags (3.14.15)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented UI for AgsVst3Bridge
	* fixed missing update of prefixed macros in build files
	* improved block scope of AgsLv2Bridge

ags (3.14.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* providing symbolic icons
	* improved prefixing macros AGS_DOC_DIR, AGS_DATA_DIR and AGS_SRC_DIR
	* improved make use of AGS_UI_PROVIDER_DEFAULT_PADDING and AGS_UI_PROVIDER_DEFAULT_MARGIN_END

ags (3.14.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing shift piano
	* minor improvements

ags (3.14.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed VST3 block controls either bridge or UI
	* fixed Lv2 block controls either bridge or UI
	* improved open files with GSequencer

ags (3.14.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsAudiorec:wave_loader_spinner field of GtkSpinner type to visualize wave loader progress